*SVN*

* Allow configuration of the default action cache path for #caches_action calls.  [Rick Olson]

  class ListsController < ApplicationController
    caches_action :index, :cache_path => Proc.new { |controller| 
      controller.params[:user_id] ? 
        controller.send(:user_lists_url, c.params[:user_id]) :
        controller.send(:lists_url) }
  end

* Performance: patch cgi/session/pstore to require digest/md5 once rather than per #initialize.  #7583 [Stefan Kaes]

* Cookie session store: ensure that new sessions doesn't reuse data from a deleted session in the same request.  [Jeremy Kemper]

* Deprecation: verification with :redirect_to => :named_route shouldn't be deprecated.  #7525 [Justin French]

* Cookie session store: raise ArgumentError when :session_key is blank.  [Jeremy Kemper]

* Deprecation: remove deprecated request, redirect, and dependency methods. Remove deprecated instance variables. Remove deprecated url_for(:symbol, *args) and redirect_to(:symbol, *args) in favor of named routes. Remove uses_component_template_root for toplevel components directory. Privatize deprecated render_partial and render_partial_collection view methods. Remove deprecated link_to_image, link_image_to, update_element_function, start_form_tag, and end_form_tag helper methods. Remove deprecated human_size helper alias.  [Jeremy Kemper]

* Consistent public/protected/private visibility for chained methods.  #7813 [Dan Manges]

* Prefer MIME constants to strings.  #7707 [Dan Kubb]

* Allow array and hash query parameters. Array route parameters are converted/to/a/path as before.  #6765, #7047, #7462 [bgipsy, Jeremy McAnally, Dan Kubb, brendan]

# Add a #dbman attr_reader for CGI::Session and make CGI::Session::CookieStore#generate_digest public so it's easy to generate digests
using the cookie store's secret. [Rick]

* Added Request#url that returns the complete URL used for the request [DHH]

* Extract dynamic scaffolding into a plugin.  #7700 [Josh Peek]
